src/objects/APTS_SelloutDataItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sellout Data Items</relationshipLabel>
        <relationshipName>APTS_SelloutDataItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Sellout Data Items</relationshipLabel>
        <relationshipName>APTS_SelloutDataItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementNumber__c</fullName>
        <label>Agreement Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Calculate_Rebate_On__c</fullName>
        <formula>TEXT(APTS_Sellout_Data__r.APTS_Calculate_Rebate_On__c)</formula>
        <label>Calculate Rebate On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CommercialRegisterNumber__c</fullName>
        <label>Commercial Register Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerChainName__c</fullName>
        <label>Customer Chain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerName__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Duplicate_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Of</label>
        <referenceTo>APTS_SelloutDataItem__c</referenceTo>
        <relationshipLabel>Duplicate Of</relationshipLabel>
        <relationshipName>Sellout_Data_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_EAN__c</fullName>
        <label>EAN Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APTS_EndCustomerSAPId__c</fullName>
        <label>JDE End Customer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_HouseNumber__c</fullName>
        <label>House Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_JDEMaterialNumber__c</fullName>
        <label>JDE Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_PartnerEndCustomerSAPId__c</fullName>
        <label>Partner End Customer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PartnerSAPId__c</fullName>
        <label>Wholesaler/Partner Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PeriodEndDate__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_PeriodStartDate2__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APTS_PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>APTS_Sellout_Data_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RecordStatusReason__c</fullName>
        <label>Record Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RecordStatus__c</fullName>
        <label>Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Verification Required</fullName>
                </value>
                <value>
                    <fullName>Passed Automatic Verification</fullName>
                </value>
                <value>
                    <fullName>Potential Lead</fullName>
                </value>
                <value>
                    <fullName>Edited By JDE Employee</fullName>
                </value>
                <value>
                    <fullName>Potential Duplicate</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <isActive>false</isActive>
                    <label>Duplicate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Segment1__c</fullName>
        <label>Segment 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SellingUoM__c</fullName>
        <label>Selling UoM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
                <value>
                    <fullName>SAP_CS</fullName>
                    <isActive>false</isActive>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>SAP_DRKS</fullName>
                    <isActive>false</isActive>
                    <label>SAP_DRKS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Sellout_Data__c</fullName>
        <label>Sellout Data</label>
        <referenceTo>APTS_Sellout_Data__c</referenceTo>
        <relationshipLabel>Sellout Data Items</relationshipLabel>
        <relationshipName>APTS_Sellout_Data_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <label>Sellout Data Item</label>
    <nameField>
        <displayFormat>SDI-{000000}</displayFormat>
        <label>Sellout Data Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sellout Data Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>